--- a/mypackages.sty
+++ b/mypackages.sty
@@ -106,3 +106,4 @@
 \usepackage{csquotes} % for quotes
 \usepackage[section,numberedsection=autolabel]{glossaries}
 
+\usepackage{cancel} %enable different four modes of striking through
