--- a/references.bib
+++ b/references.bib
@@ -366,5 +366,17 @@ doi = {10.1109/PAC.2007.4439986}
   note = {Accessed: 16-2-2022},
 }
 
+@misc{numpy_mean,
+  title = {NumPy Reference},
+  url  =  {https://numpy.org/doc/stable/reference/generated/numpy.mean.html},
+  note = {Accessed: 8-3-2022},
+}
+
+@misc{numpy_std,
+  title = {NumPy Reference},
+  url  =  {https://numpy.org/doc/stable/reference/generated/numpy.std.html},
+  note = {Accessed: 8-3-2022},
+}
+
 
 
