--- a/references.bib
+++ b/references.bib
@@ -378,5 +378,14 @@ doi = {10.1109/PAC.2007.4439986}
   note = {Accessed: 8-3-2022},
 }
 
+@book{lvp.b313005720130101,
+Author = {Barlow, R. J.},
+ISBN = {9781118723234},
+Publisher = {Wiley},
+Series = {Manchester Physics Series},
+Title = {Statistics. A Guide to the Use of Statistical Methods in the Physical Sciences.},
+URL = {https://liverpool.idm.oclc.org/login?url=https://search.ebscohost.com/login.aspx?direct=true&db=cat00003a&AN=lvp.b3130057&site=eds-live&scope=site},
+Year = {2013},
+}
 
 
