--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -11,6 +11,8 @@ For a data set of $N$ data $\{ x_1, x_2, x_3, ..., x_N \}$ the arithmetic mean o
 \begin{equation}\label{eq:mean_def}
     \langle x \rangle = \frac{1}{N} \sum_{i=1}^{N} x_i.
 \end{equation}
+% python --> numpy.mean
+
 
 \normalsize{\textbf{Root mean square}}\\
 An alternative to the arithmetic mean is the root mean square (rms), which for the set of $N$ numbers is defined as:
@@ -20,13 +22,16 @@ An alternative to the arithmetic mean is the root mean square (rms), which for t
 
 In other words it is the square root of the arithmetic mean of the squares of the data set values. It is common in physics and in sciences in general to used the rms value instead of the arithmetic mean when it comes to distributions or when the random variables have both positive and negative values.
 
-\subsection{measurement of the spread}
+\subsection{Measuring the spread}
 \normalsize{\textbf{Variance}}\\
+For a data set of $N$ data $\{ x_1, x_2, x_3, ..., x_N \}$ the variance of $x$  expresses how much it can vary from the mean value, $\langle x \rangle$. The variance is written as $\mathrm{Var}(x)$ and is defined as:
 
 
-- mention also covarince.
+
+% compatible with numpy.var --> /eos/user/n/natriant/Project_thesis/material/Appendix/test_numpy_definitions.ipynb
 
 
+\subsection{Covariance}
 
 \section{Least squares fitting}\label{app:non_linear_fitting}
 In sciences, many quantities can not be measured directly but can be inferred from measured data by fitting a model function to them. Common model functions are the Gaussian, polynomial, or sinusoidal. The fitting procedure followed in this thesis is called "least squares" and is described below based on Ref.~\cite{least_square_minimisation}.
