--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -38,9 +38,11 @@ The square root of the variance is the standard deviation (std):
 
 The spread in a data set is usually expressed with the standard deviation instead of the variance, as the standard deviation has the same units with the variable $x$.
 
+When the mean of the data set is zero the standard deviation equals the root mean square.
+
+\subsection{More than one variables - Covariance}
 
 
-\subsection{Covariance}
 
 \section{Least squares fitting}\label{app:non_linear_fitting}
 In sciences, many quantities can not be measured directly but can be inferred from measured data by fitting a model function to them. Common model functions are the Gaussian, polynomial, or sinusoidal. The fitting procedure followed in this thesis is called "least squares" and is described below based on Ref.~\cite{least_square_minimisation}.
