--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -28,20 +28,30 @@ For a data set of $N$ data $\{ x_1, x_2, x_3, ..., x_N \}$ the variance of $x$  
 \begin{equation}\label{eq:var_def}
     \mathrm{Var}(x) = \frac{1}{N} \sum_{i=1}^{N} (x_i-\langle x \rangle)^2.
 \end{equation}
-% compatible with numpy.var --> /eos/user/n/natriant/Project_thesis/material/Appendix/test_numpy_definitions.ipynb
+% compatible with numpy.var, tested at: /eos/user/n/natriant/Project_thesis/material/Appendix/test_numpy_definitions.ipynb
 
 \normalsize{\textbf{Standard deviation}}\\
 The square root of the variance is the standard deviation (std):
 \begin{equation}\label{eq:std_def}
     \sigma_x = \sqrt{\mathrm{Var}(x)} = \sqrt{\frac{1}{N} \sum_{i=1}^{N} (x_i-\langle x \rangle)^2}.
 \end{equation}
-
+% compatible with numpy.std, tested at /eos/user/n/natriant/Project_thesis/material/Appendix/test_numpy_definitions.ipynb
 The spread in a data set is usually expressed with the standard deviation instead of the variance, as the standard deviation has the same units with the variable $x$.
 
 When the mean of the data set is zero the standard deviation equals the root mean square.
 
 \subsection{More than one variables - Covariance}
+In the case that each element of the data set consists of a pair of variables, $\{(x_1, y_1),$ $(x_2, y_2), (x_2, y_2), ...(x_N, y_N)\}$ the covarinace expresses the extend to which $x$ and $y$ tend to vary together. The covariance between $x$ and $y$ is defined as:
 
+\begin{equation}\label{eq:cov_def}
+    \mathrm{Cov}(x, y) = \frac{1}{N} \sum_{i=1}^{N} (x_i-\langle x \rangle) (y_i-\langle y \rangle).
+\end{equation}
+
+It can be seen that the covariance of variable $x$ with itslef equals the variance. In particular, it is written:
+
+\begin{equation}\label{eq:std_var_cov_relationship}
+    \mathrm{Cov}(x, x) = \sqrt{\frac{1}{N} \sum_{i=1}^{N} (x_i-\langle x \rangle)^2} = \mathrm{Var}(x) = \sigma_x^2.
+\end{equation}
 
 
 \section{Least squares fitting}\label{app:non_linear_fitting}
