add some preliminary notes in the introuctory chapter 2

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -44,6 +44,10 @@ The spread in a data set is usually expressed with the standard deviation instea
 
 When the mean of the data set is zero the standard deviation equals the root mean square.
 
+\normalsize{\textbf{Full width half maximum}}\\
+An alternative measure of the spread is the full width half maximum (FWHM).
+
+
 \subsection{Data sets with more than one variables - Covariance}
 In the case that each element of the data set consists of a pair of variables, $\{(x_1, y_1),$ $(x_2, y_2), (x_2, y_2), ...(x_N, y_N)\}$ the covarinace expresses the extend to which $x$ and $y$ tend to vary together. The covariance between $x$ and $y$ is defined as:
 \begin{equation}\label{eq:cov_def}
