normalsied sum signal > 0.2 for 270 GeV

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -139,6 +139,8 @@ If $X$ and $Y$ are independent the mean of their product equals:
     \langle X \cdot Y \rangle = \langle X \rangle \cdot  \langle Y \rangle
 \end{equation}
 
+Add property of the exponential distribution, that the standard deviation and the mean are equal.
+
 It should be mentioned that only the initial actions $J_x$ and $J_y$ are actually independent. The actions later in time, even though they are considered independent in the analysis, are coupled due the non-linearities of the lattice.
 
 \textbf{Note 2:}
