--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -2,7 +2,7 @@ For the uncertainty in the mean:
 https://www.physics.upenn.edu/sites/default/files/Managing%20Errors%20and%20Uncertainty.pdf
 
 \section{Statistics definitions}\label{app:statistics_definitions}
-This appendix, introduces the basic terminology of statistical analysis and gives the definitions that are used in this thesis. The definitions follow the book by R. J. Barlow~\cite{lvp.b313005720130101} where one can find a more detailed description.
+This appendix, introduces the basic terminology of statistical analysis and gives the definitions that are used in this thesis. The definitions follow the book by R. J. Barlow~\cite{lvp.b313005720130101} where one can find a more detailed insight.
 
 \subsection{Averages}
 \normalsize{\textbf{Arithmetic mean}}\\
