--- a/mypackages.sty
+++ b/mypackages.sty
@@ -107,3 +107,4 @@
 \usepackage[section,numberedsection=autolabel]{glossaries}
 
 \usepackage{cancel} %enable different four modes of striking through
+\usepackage{verbatim}
