finalise definitions for statistical analysis

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -18,9 +18,9 @@ In the classical definition of mathematics, the root mean square (rms) is an alt
     x^{rms} = \sqrt{\frac{x_1^2+x_2^2+x_3^2+...+x_N^2}{N}}=\langle x^2 \rangle.
 \end{equation}
 %In other words it is the square root of the arithmetic mean of the squares of the data set values. It is common in physics and in sciences in general to used the rms value instead of the arithmetic mean when it comes to distributions or when the random variables have both positive and negative values.
-However, it is common in physics and in sciences in general for the term rms to correspond to what is actually defined as standard deviation (see details Appendix~\ref{app:meas_spread}). This convention, is also followed in this thesis.
-
-
+\begin{itemize}
+\item \textbf{Disclaimer:} It is common in physics and in sciences in general for the term rms to correspond to what is actually defined as standard deviation (see definition in Appendix~\ref{app:meas_spread}). This convention, is also followed in this thesis.
+\end{itemize}
 \subsection{Measuring the spread}\label{app:meas_spread}
 \normalsize{\textbf{Variance}}\\
 For a data set of $N$ data $\{ x_1, x_2, x_3, ..., x_N \}$ the variance of $x$  expresses how much it can vary from the mean value, $\langle x \rangle$. The variance, $\mathrm{Var}(x)$, is defined as:
@@ -44,8 +44,6 @@ or as follows from Eq.~\eqref{eq:var_def_2}:
 \end{equation}
 % compatible with numpy.std, tested at /eos/user/n/natriant/Project_thesis/material/Appendix/test_numpy_definitions.ipynb
 The spread in a data set is usually expressed with the standard deviation instead of the variance, as the standard deviation has the same units with the variable $x$.
-
-In this thesis, the standard deviation will be
 
 %When the mean of the data set is zero the standard deviation equals the root mean square.
 
