update detuning with ampltitude

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -90,15 +90,13 @@ The values of the optimal parameters and their covariance matrix are computed in
 - check sondre's thesis
 
 The detuning with amplitude is computed by:
-
 \begin{equation}\label{eq:x_amplDetuning}
-    \Delta Q_x = 2(\alpha_{xx}J_x + \alpha_{xy}J_y)
+    \Delta Q_x = 2(\axx \Jx + \alpha_{xy} \Jy)
 \end{equation}
-
 \begin{equation}\label{eq:y_amplDetuning}
-    \Delta Q_y = 2(\alpha_{yy}J_y + \alpha_{yx}J_x)
+    \Delta Q_y = 2(\ayy \Jy + \alpha_{yx} \Jx)
 \end{equation}
-where $\alpha_{yy}$, $\alpha_{xx}$ and $\alpha_{xy}=\alpha_{yx}$ are the detuning coefficients with units 1/m.
+where $\ayy$, $\axx$ and $\axy$ are the detuning coefficients with units [1/m].
 
 
 \normalsize{\textbf{Rms detuning with amplitude}}\\
