--- a/mypackages.sty
+++ b/mypackages.sty
@@ -106,5 +106,5 @@
 \usepackage{csquotes} % for quotes
 \usepackage[section,numberedsection=autolabel]{glossaries}
 
-\usepackage{cancel} %enable different four modes of striking through
-\usepackage{verbatim}
+\usepackage{cancel} % enable different four modes of striking through
+\usepackage{verbatim} % for commenting out multiple lines
