non linear sps model

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -42,7 +42,7 @@ For a data set of $N$ data $\{ x_1, x_2, x_3, ..., x_N \}$ the variance of $x$  
     \mathrm{Var}(x) = \frac{1}{N} \sum_{i=1}^{N} (x_i-\langle x \rangle)^2.
 \end{equation}
 % compatible with numpy.var, tested at: /eos/user/n/natriant/Project_thesis/material/Appendix/test_numpy_definitions.ipynb
-This formula, can be written in a simpler way as follows (see Ref.~\cite{lvp.b313005720130101} p.24-25):
+Alternatively, the variance can be expressed in a simpler way as follows (see Ref.~\cite{lvp.b313005720130101} p.24-25):
 \begin{equation}\label{eq:var_def_2}
     \mathrm{Var}(x) = \langle x^2 \rangle - \langle x \rangle^2.
 \end{equation}
@@ -168,4 +168,5 @@ of the lattice. %The actions later in time, even though they are considered inde
 %\end{itemize}
 
 
-\normalsize{\textbf{Rms detuning with amplitude from the SPS multiple errors}}\\
+\normalsize{\textbf{Rms detuning with amplitude from the SPS multiple errors at 270\,GeV}}\\
+
