--- a/main.tex
+++ b/main.tex
@@ -75,7 +75,7 @@
 \appendix
 \chapter{Appendix Title}
 \input{appendix/appendix}
-\chapter{Glossary}
+\chapter{Glossary and defintions}
 \input{appendix/glossary}
 
 \backmatter
